# time_tracer

./: .clang-format  .clang-tidy  .clang-tidy.strict  .gitattributes  .gitignore  LICENSE  README.en.md  README.md  TODO.md  ascii.txt  log_processor.cpp  pyproject.toml
Time_Master/: CMakeLists.txt  bash.sh  commond.txt  main.cpp  main_command.cpp
Time_Master/FileHandler/: FileHandler.cpp
Time_Master/Reprocessor/: BillModifier.cpp  BillModifier.h  BillValidator.cpp  BillValidator.h  CMakeLists.txt  Reprocessor.cpp  Reprocessor.h  build.sh  main.cpp
Time_Master/action_handler/: action_handler.cpp
Time_Master/common/: common_utils.h  version.h
Time_Master/config/: config.json
Time_Master/database/: database_inserter.cpp
Time_Master/menu/: menu.cpp  menu.h
Time_Master/parsing/: data_parser.cpp  data_parser.h
Time_Master/processing/: processing.cpp
Time_Master/reprocessing/: FormatValidator.cpp  IntervalProcessor.cpp  IntervalProcessor.h  LogProcessor.cpp  LogProcessor.h
Time_Master/reprocessing/validator/: OutputFileValidator.cpp  SourceFileValidator.cpp  SourceFileValidator.h  ValidatorUtils.h
apps/log_generator/: CMakeLists.txt  HISTORTY.md
apps/log_generator/cmake/: AddTidyFixTarget.cmake  ClangTidy.cmake  CompilerOptions.cmake  FileOperations.cmake  Sources.cmake
apps/log_generator/config/: activities_config.json  activities_config.toml  common_activities.json
apps/log_generator/scripts/: build.py  build.sh  build.toml  build_fast.sh  build_tidy.sh  format.sh  refactor.py  workflow.py
apps/log_generator/src/: main.cpp  pch.hpp  version.h  version.hpp
apps/time_tracer/: CMakeLists.txt  README.md  cloc.md
apps/time_tracer/.ai/: rules.md  style.md
apps/time_tracer/cmake/: AddFormatTarget.cmake  AddTidyFixTarget.cmake  AndroidDependencies.cmake  BuildTypeFlags.cmake  CoreBoundaryRules.cmake  Packaging.cmake  SourceFileCollection.cmake  TargetSetup.cmake  Win32PostBuildCopy.cmake
apps/time_tracer/config/: config.toml
apps/time_tracer/scripts/: build_fast.sh  build_tidy.sh  config.toml  format.sh  refactor.py  run_clang_tidy.sh  run_clang_tidy_split_only.sh  workflow.py
apps/time_tracer/src/: CMakeLists.txt  main_cli.cpp  pch.hpp
apps/tracer_cli/windows/: CMakeLists.txt  README.md  agent.md  icon_generation.md
apps/tracer_core/: CMakeLists.txt  README.md  agent.md
apps/tracer_core/cmake/: AddFormatTarget.cmake  AddTidyFixTarget.cmake  BuildTypeFlags.cmake  CoreBoundaryRules.cmake  HostDependencies.cmake  Packaging.cmake  TargetSetup.cmake  Win32PostBuildCopy.cmake
apps/tracer_core/src/: CMakeLists.txt  pch.hpp
libs/tracer_adapters_io/: CMakeLists.txt  README.md
libs/tracer_adapters_io/tests/: adapters_io_legacy_headers_compat_tests.cpp  adapters_io_modules_smoke_tests.cpp
libs/tracer_core/: CMakeLists.txt  README.md
libs/tracer_core/cmake/: application.cmake  domain.cmake  infrastructure.cmake  shared.cmake
libs/tracer_core/infra/: CMakeLists.txt
libs/tracer_core/infrastructure/: CMakeLists.txt
libs/tracer_core_bridge_common/: CMakeLists.txt  README.md
libs/tracer_core_bridge_common/tests/: README.md
libs/tracer_transport/: CMakeLists.txt  README.md
libs/tracer_transport/src/: envelope.cpp  fields.cpp  runtime_codec_capabilities.cpp  runtime_codec_export.cpp  runtime_codec_ingest.cpp  runtime_codec_query.cpp  runtime_codec_report.cpp  runtime_codec_runtime.cpp  runtime_codec_tree.cpp  runtime_codec_workflow.cpp
libs/tracer_transport/tests/: transport_envelope_tests.cpp  transport_fields_tests.cpp  transport_modules_smoke_tests.cpp  transport_runtime_codec_decode_request_tests.cpp  transport_runtime_codec_decode_response_tests.cpp  transport_runtime_codec_encode_tests.cpp  transport_runtime_codec_test_common.hpp  transport_runtime_codec_tests.cpp
modules/tracer_transport/: CMakeLists.txt  README.md
modules/tracer_transport/src/: envelope.cpp  errors.cpp  runtime_codec_capabilities.cpp  runtime_codec_export.cpp  runtime_codec_ingest.cpp  runtime_codec_query.cpp  runtime_codec_report.cpp  runtime_codec_runtime.cpp  runtime_codec_tree.cpp  runtime_codec_workflow.cpp
modules/tracer_transport/tests/: transport_envelope_tests.cpp  transport_fields_tests.cpp  transport_runtime_codec_tests.cpp
time_master/: CMakeLists.txt  bash.sh  build.py  main.cpp  main_cli.cpp
time_master/action_handler/: ActionHandler.cpp  ActionHandler.h  ExportUtils.cpp  ExportUtils.h  FileProcessingHandler.cpp  FileProcessingHandler.h  ReportGenerationHandler.cpp  ReportGenerationHandler.h
time_master/action_handler/database/: DatabaseManager.cpp
time_master/action_handler/file/: FilePipelineManager.cpp
time_master/action_handler/query/: DirectQueryManager.cpp
time_master/cmake/: Packaging.cmake  SourceFileCollection.cmake  TargetSetup.cmake
time_master/common/: common_utils.cpp  common_utils.h  version.h
time_master/config/: format_validator_config.json  interval_processor_config.json
time_master/db_inserter/: DataImporter.cpp  DataImporter.h
time_master/db_inserter/inserter/: DatabaseInserter.cpp  DatabaseInserter.h
time_master/db_inserter/model/: time_sheet_model.h
time_master/db_inserter/parser/: DataFileParser.cpp  DataFileParser.h  ParserFactory.cpp  ParserFactory.h
time_master/db_inserter/parser_and_inserter/: DataFileParser.cpp  DataFileParser.h  DatabaseInserter.cpp  DatabaseInserter.h  time_sheet_model.h
time_master/file_handler/: ConfigLoader.cpp  ConfigLoader.h  FileController.cpp  FileController.h  FileUtils.cpp  FileUtils.h
time_master/queries/: QueryHandler.cpp  QueryHandler.h
time_master/queries/daily/: DailyFmtFactory.cpp  DailyFmtFactory.h  DailyReportGenerator.cpp  DayFmtFactory.cpp  DayFmtFactory.h  IDailyFmt.h
time_master/queries/export/: AllDayReports.cpp  AllMonthlyReports.cpp  AllPeriodReports.cpp
time_master/queries/format/: ProjectBreakdownFormatterFactory.h  (+1 more)
time_master/reprocessing/: LogProcessor.cpp  LogProcessor.h
time_master/src/: main.cpp  main_cli.cpp  pch.hpp
time_master/time_master_app/: menu.cpp  menu.h
time_master/time_master_cli/: CliController.cpp  CliController.h
(+5900 files in other folders)
