[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-tracer-tools"
version = "0.0.0"
description = "Internal Python tooling for the time_tracer repository"
requires-python = ">=3.11"
dependencies = ["markdown-it-py>=3.0.0,<4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # 基础风格
    "F",   # 语法错误
    "B",   # 逻辑漏洞 (Bugprone)
    "UP",  # 现代化 (Modernize)
    "I",   # 排序 Import
    "A",   # 防止覆盖内置变量
    "N",   # 命名规范
]
ignore = [
    "E501",  # 交给 ruff format 处理长行
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
